# SBILib

./: MANIFEST.in  README.md  REQUIREMENTS  Scenarios.ipynb  Scenarios.md  requirements.txt  setup.cfg  setup.py
SBI/: __init__.py
SBI/beans/: Executable.py  File.py  JSONer.py  Path.py  README.md  StorableObject.py  __init__.py  butler.py  singleton.py
SBI/data/: Alphabet.py  AminoAcids.py  Properties.py  __init__.py
SBI/databases/: CATHlink.py  DrugBanklink.py  Enzymelink.py  GOlink.py  PDBTMlink.py  PDBeChemlink.py  PDBlink.py  SCOPlink.py  TaxIDlink.py  Uniprotlink.py  __Uniprotlink.py  dblink.py
SBI/databases/uniprot/: connect.py  uniprot.py
SBI/error/: FileError.py  SeqAliError.py  __init__.py
SBI/math/: __init__.py
SBI/sequence/: Fasta.py  IndexedSeqAli.py  SeqAli.py  Sequence.md  Sequence.py
SBI/sequence/alignment/: Needleman_Wunsch.py  SeqAli.py  SimilarityMatrix.py
SBI/structure/: PDB.py  parse_mmCIF.py  parse_pdb.py
SBI/structure/atom/: Atom.py  AtomSeries.py
SBI/structure/chain/: Chain.py  ChainFrame.py  ChainOfNucleotide.py  ChainOfProtein.py  ProteinChainFrame.py  __init__.py
SBI/structure/contacts/: Complex.py  InnerContacts.py
SBI/structure/header/: BioMolecule.py  DBreference.py  Experiment.py  Header.py  HeteroAtom.py  MiniRes.py  Molecule.py  SecondaryStructure.py  Site.py  __init__.py
SBI/structure/protein/: Arch.py  SShelper.py  __init__.py
SBI/structure/residue/: Residue.py  ResidueFrame.py  (+3 more)
images/: summary.txt
src/SBILib/: __init__.py
src/SBILib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+88 files in other folders)
