[metadata]
description-file = README.md

[flake8]
ignore =
    E402,  # module level import not at top of file
    E201,  # whitespace after '('
    E202,  # whitespace before ')'
    E712,  # comparison to bool (for assertions)
    E221,  # multiple spaces before operator
    E241   # Multiple spaces after ','
max-line-length = 150
